fix(config): derive config version from content so SDK stops re-pulling every poll (A2)
getFullConfig stamped the payload with a fresh timestamp version, while
/config/version returned a different value from getLatestVersion(). The two never
matched, so checkVersion always reported "has update" and every SDK re-pulled the
full config on every poll.

- computeVersion(): deterministic fingerprint over running experiments'
  (expId, updatedAt), hashed with MurmurHash3. getLatestVersion() and getFullConfig()
  use the same function, so /config/version and /config/fetch always agree; the SDK
  only refetches when the config actually changes.
- getFullConfig: batch the layer/bucket lookups (kill the N+1) and send only ACTIVE
  buckets (it previously sent all historical versions via selectByExpId).
- Drop the now-dead generateCurrentVersion()/isBucketable() and the ConfigVersion
  table dependency; version cache TTL 300s -> 30s for timely propagation.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BAoA9R1dmsQgPenYGtBxTe